[workspace]
members = [
  "compiler/tilc",
  "compiler/tilc_ast",
  "compiler/tilc_lexer",
  "compiler/tilc_parser",
]
default-members = ["compiler/tilc"]
resolver = "2"


[workspace.dependencies]
# Internal packages
tilc_ast = { path = "compiler/tilc_ast" }
tilc_lexer = { path = "compiler/tilc_lexer" }
tilc_parser = { path = "compiler/tilc_parser" }


# External crates
